syntax = "proto3";
package greet;

service greet {
  rpc GetStudent(SayHello) returns (HelloReply) {}
  rpc GetStudentAgain(SayHello) returns (HelloReply) {}
}

message SayHello {
  string name = 1;
}

message HelloReply {
  string message = 1;
}